# src/models/user.model.js
@@ -1,59 +1,59 @@
 const { DataTypes } = require("sequelize");
-const BaseModel = require('../models/base.model');
+const BaseModel = require("../models/base.model");
 const bcrypt = require("bcrypt");
 
-class Usuario extends BaseModel {
+class User extends BaseModel {
   constructor() {
-    const schema = 
-      {
-        password: {
-          type: DataTypes.STRING(100),
-          allowNull: false,
-          validate: {
-            notEmpty: true,
-            is:/\S+/
-          },
+    const schema = {
+      password: {
+        type: DataTypes.STRING(100),
+        allowNull: false,
+      },
+      name: {
+        type: DataTypes.STRING(50),
+        allowNull: false,
+        validate: {
+          notEmpty: { args: true, msg: "The field name could not be empty" },
+          len: { min: 3,msg:"The field name should have at least 3 characters" }
+
         },
-        name: {
-          type: DataTypes.STRING(50),
-          allowNull: false,
-          validate: {
-            notEmpty: true,
-          },
+      },
+      email: {
+        type: DataTypes.STRING(50),
+        allowNull: false,
+        unique: true,
+        validate: {
+          notEmpty: { args: true, msg: "The field email could not be empty" },
+          isEmail: true,
         },
-        email: {
-          type: DataTypes.STRING(50),
-          allowNull: false,
-          unique: true,
-          validate: {
-            notEmpty: true,
-            isEmail: true,
-          },
+      },
+      enable: {
+        type: DataTypes.BOOLEAN,
+        allowNull: false,
+        defaultValue: true,
+        validate: {
+          notEmpty: true,
         },
-        enable: {
-          type: DataTypes.BOOLEAN,
-          allowNull: false,
-          defaultValue: true,
-          validate: {
-            notEmpty: true,
-          },
-        },
-         role: {
-         type: DataTypes.ENUM({ values: ["ADMIN_ROLE", "USER_ROLE"] }),
-         defaultValue: "USER_ROLE",
-         }
-    }
-      super("Users",schema)
-      
-    
+      },
+      isAdmin: {
+        type: DataTypes.BOOLEAN,
+        defaultValue: false,
+      },
+    };
+    super("Users", schema);
   }
 
   async create(user) {
+    if (user.password.trim() == "") {
+      throw new Error("The field password cannot be empty");
+    }
+    if (user.password.length <= 5) {
+      throw new Error("The password must have at least 6 characters");
+    }
     user.password = await bcrypt.hash(user.password, 10);
     const newUser = await this.model.create(user);
     return newUser.dataValues;
   }
-
 
   async getByEmail(email) {
     const userByEmail = await this.model.findOne({ where: { email: email } });
@@ -69,8 +69,7 @@ class Usuario extends BaseModel {
     const user = await this.model.findOne({ where: { email: email } });
     return await bcrypt.compare(password, user.password);
   }
-
-
 }
+const user = new User();
 
-module.exports = new Usuario();
+module.exports = user;
